--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,10 @@
 {
-  "functions": {
-    "api/demands.ts": {
-      "runtime": "@vercel/node"
-    },
-    "api/config.ts": {
-      "runtime": "@vercel/node"
-    }
-  },
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
   "rewrites": [
     {
       "source": "/api/:path*",
       "destination": "/api/:path*"
     }
-  ],
-  "buildCommand": "npm run build"
+  ]
 }
