--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,13 @@
 VITE_JSONBIN_BIN_ID=your_bin_id_here
 VITE_JSONBIN_API_KEY=your_api_key_here
+
+# Supabase (client - Vite)
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=your_anon_key_here
+
+# Push Notifications (server-side - Vercel Functions)
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
+VAPID_PUBLIC_KEY=your_vapid_public_key_here
+VAPID_PRIVATE_KEY=your_vapid_private_key_here
+VAPID_SUBJECT=mailto:admin@fluxo7dev.com
