--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "pg": "^8.16.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^7.9.6",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
