--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ VITE_JSONBIN_API_KEY=your_api_key_here
 # Supabase (client - Vite)
 VITE_SUPABASE_URL=https://your-project.supabase.co
 VITE_SUPABASE_ANON_KEY=your_anon_key_here
+VITE_NOTIFICATIONS_API_KEY=your_client_side_notifications_key_here
 
 # Push Notifications (server-side - Vercel Functions)
 SUPABASE_URL=https://your-project.supabase.co
@@ -11,3 +12,4 @@ SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
 VAPID_PUBLIC_KEY=your_vapid_public_key_here
 VAPID_PRIVATE_KEY=your_vapid_private_key_here
 VAPID_SUBJECT=mailto:admin@fluxo7dev.com
+NOTIFICATIONS_API_KEY=your_server_side_notifications_key_here
